reformulação de dependencias das camadas controller e service, testes unitários
