# api/v1/controllers/favoriteController.js
@@ -1,18 +1,17 @@
 const favoriteService = require('../services/favoriteService')
-const mongoose = require('mongoose')
 
 module.exports = {
     async createFavoriteList(req, res){
         try{
             const clientId = req.params.id
-            if(!clientId){
-                return res.status(400).json({ message: 'Client ID is required.' })
-            }
-
             const newFavoriteList = await favoriteService.createFavoriteList(clientId)
             return res.status(201).json(newFavoriteList)
 
         }catch (error){
+            if(error.message === 'Client ID is required.'){
+                return res.status(400).json({ message: error.message })
+            }
+
             if(error.message === 'This client already has a favorites list.'){
                 return res.status(409).json({ message: error.message })
             }
@@ -25,17 +24,18 @@ module.exports = {
         try{
             const clientId = req.params.id
             const productId = req.body.productId
-            if(!clientId || !productId){
-                return res.status(400).json({ message: 'Client and Product ID id are required.' })
-            }
-            if (!mongoose.isValidObjectId(productId)){
-                return res.status(400).json({ message: 'Invalid Product ID format.' })
-            }
-
             const FavoriteList = await favoriteService.addProductFavoriteList(clientId, productId)
             return res.status(200).json(FavoriteList)
 
         }catch (error){
+            if(error.message === 'Client and Product ID id are required.'){
+                return res.status(400).json({ message: error.message })
+            }
+
+            if(error.message === 'Invalid Product ID format.'){
+                return res.status(400).json({ message: error.message })
+            }
+
             if(error.message === 'Client does not have a favorites list.'){
                 return res.status(404).json({ message: error.message })
             }
@@ -56,9 +56,6 @@ module.exports = {
         try{
             const clientId = req.params.id
             const productId = req.body.productId
-            if(!clientId || !productId){
-                return res.status(400).json({ message: 'Client and Product ID id are required.' })
-            }
 
             const favoriteList = await favoriteService.removeProductFavoriteList(clientId, productId)
             return res.status(200).json(favoriteList)
@@ -66,6 +63,10 @@ module.exports = {
         }catch (error){
             if(error.message === 'Client does not have a favorites list.'){
                 return res.status(404).json({ message: error.message })
+            }
+
+            if(error.message === 'Client and Product ID id are required.'){
+                return res.status(400).json({ message: error.message })
             }
 
             if(error.message === 'Product not found in favorites list.'){
@@ -79,18 +80,17 @@ module.exports = {
     async getFavoritesList(req, res){
         try{
             const clientId = req.params.id
-            if(!clientId){
-                return res.status(400).json({ message: 'Client ID is reqiured.' })
-            }
-
             const favoriteList = await favoriteService.getFavoritesList(clientId)
-            if(!favoriteList){
-                return res.status(404).json({ message: 'Client does not have a favorites list.' })
+            return res.status(200).json(favoriteList)
+        }catch (error){
+            if(error.message === 'Client ID is required.'){
+                return res.status(400).json({ message: error.message })
             }
 
-            return res.status(200).json(favoriteList)
+            if(error.message === 'Client does not have a favorites list.'){
+                return res.status(404).json({ message: error.message })
+            }
 
-        }catch (error){
             return res.status(500).json({ message: 'Internal server Error. ' + error.message })
         }
     },
